# Iclinic-Auth

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
Auth-Backend/: seed.py
Auth-Backend/src/api/rest/: app.py  dependencies.py
Auth-Backend/src/api/rest/routes/: auth.py  users.py
Auth-Backend/src/config/: security.py  settings.py
Auth-Backend/src/core/services/: auth_service.py  authorization_service.py  jwt_service.py  password_service.py  role_service.py  user_service.py
Auth-Backend/src/data/clients/: postgres_client.py
Auth-Backend/src/data/models/postgres/: permission.py  refresh_token.py  role.py  role_permission.py  user.py
Auth-Backend/src/data/repositories/: permission_repository.py  refresh_token_repository.py  role_permission_repository.py  role_repository.py  user_repository.py
Auth-Backend/src/schemas/auth/: register_request.py  user_response.py
Auth-Backend/src/utils/: cookie_utils.py
Frontend/: Dockerfile  nginx.conf  package-lock.json
Frontend/src/: App.css  App.tsx
Frontend/src/app/routes/: AppRouter.tsx
Frontend/src/components/layout/: AuthLayout.tsx  ProtectedLayout.tsx
Frontend/src/config/: env.ts
Frontend/src/features/auth/components/: LoginForm.tsx  RegisterForm.tsx
Frontend/src/features/auth/context/: AuthContext.tsx
Frontend/src/features/auth/hooks/: useLogin.ts  useRegister.ts
Frontend/src/hooks/: useWebSocketChat.ts
Frontend/src/lib/: axios.ts  backendClient.ts
Frontend/src/styles/: global.css
alembic/: env.py
alembic/versions/: 4a21082b72cb_initial_schema_with_rbac.py
(+8 files in other folders)
